--- a/index.html
+++ b/index.html
@@ -33,7 +33,22 @@
       </div>
       <div class="linea"></div>
       <div class="region"><!-- InstanceBeginEditable name="Edit" -->
-        <div class="foros"><img src="images/foros.PNG" width="832" height="201" alt="foros" /></div>
+        <div class="medioi">		  
+        <div class="foros"><img src="images/foros.PNG" width="794" height="200" alt="foros" /></div>
+        <div class="redes">
+          <div class="gplus"><img src="images/gplus.PNG" width="86" height="92" alt=""/></div>
+		  <div class="face"><a href="https://www.facebook.com/UniversidadUNAD/"><img src="images/face.PNG" width="84" height="90" alt="Síguenos en Facebook"/></a></div>
+		  <div class="twitt"><a href="https://twitter.com/UniversidadUNAD?s=08"><img src="images/twitt.PNG" width="77" height="88" alt="Síguenos en Twitter"/></a></div>
+		  <div class="pinte"><img src="images/pinte.PNG" width="85" height="84" alt=""/></div>
+		 </div>
+			</div>
+        <div class="textoi">La administración de redes informáticas está estrechamente vinculada a la tecnología de la información (TI).
+
+La tecnología de la información está relacionada con el diseño, el desarrollo, la implementación, el soporte y la administración de hardware, software y sistemas informáticos en red.
+
+Los profesionales de TI poseen un amplio conocimiento sobre sistemas de computación y sistemas operativos y gozan de las capacidades necesarias para llevar a cabo la administración de la red.</div>
+        
+		  
       <!-- InstanceEndEditable --></div>
       <div class="footer">
       <p>&nbsp;</p>
