--- a/index.html
+++ b/index.html
@@ -47,8 +47,13 @@
 La tecnología de la información está relacionada con el diseño, el desarrollo, la implementación, el soporte y la administración de hardware, software y sistemas informáticos en red.
 
 Los profesionales de TI poseen un amplio conocimiento sobre sistemas de computación y sistemas operativos y gozan de las capacidades necesarias para llevar a cabo la administración de la red.</div>
-        
+        <div class="banner">
+          <div class="imaginfe"><img src="images/red3.PNG" width="340" height="229" alt=""/><img src="images/red 1.jpg" width="340" height="229" alt=""/></div>
+          <div class="twitteru">
+			<a class="twitter-timeline" href="https://twitter.com/UniversidadUNAD?ref_src=twsrc%5Etfw">Tweets by UniversidadUNAD</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+			</div>
 		  
+		  </div>  
       <!-- InstanceEndEditable --></div>
       <div class="footer">
       <p>&nbsp;</p>
